app/assets/stylesheets/application.tailwind.css
/* Copyright 2023, Flexpoint Tech
 *
 * This file is part of Repeater World.
 *
 * Repeater World is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General
 * Public License as published by the Free Software Foundation, either version 3 of the License.
 *
 * Repeater World is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied
 * warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more
 * details.
 *
 * You should have received a copy of the GNU Affero General Public License along with Repeater World. If not, see
 * <https://www.gnu.org/licenses/>.
 */

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
    .link {
        @apply underline text-orange-600 hover:text-orange-800 dark:text-orange-600 dark:hover:text-orange-300;
    }

    .button-base {
        @apply inline-block
        py-3 sm:py-4
        px-3 sm:px-5 md:px-7
        font-semibold
        rounded-md
        outline-2 outline-offset-2
        focus-within:outline;
    }

    .button-base svg.svg-inline--fa {
        @apply mr-1 sm:mr-2 md:mr-3;
    }

    .button {
        @apply button-base
        text-white bg-orange-500
        outline-orange-600
        dark:outline-orange-400
        hover:bg-orange-600
        dark:hover:bg-orange-400
        focus:bg-orange-600
        dark:focus:bg-orange-400;
    }

    .button-secondary {
        @apply button-base
        bg-cyan-300 dark:bg-cyan-800
        outline-cyan-400
        dark:outline-cyan-700
        hover:bg-cyan-400
        dark:hover:bg-cyan-700
        focus:bg-cyan-400
        dark:focus:bg-cyan-700;
    }


    /* Override Tailwinds white background, with transparent background, which makes dark mode behave correctly */
    [multiple], [type=date], [type=datetime-local], [type=email], [type=month], [type=number], [type=password], [type=search], [type=tel], [type=text], [type=time], [type=url], [type=week], select, textarea {
        @apply bg-transparent;
    }

    /* Make the select options work in dark mode, transparency doesn't work for them */
    select option, select optgroup {
        @apply bg-gray-50 dark:bg-gray-800;
    }

    .field-text {
        @apply py-1.5
        rounded-md border shadow-sm border-gray-300 dark:border-gray-600
        placeholder:text-gray-400 dark:placeholder-gray-500
        focus:outline-2 focus:outline-offset-0 focus:outline-orange-500 focus:border-orange-500;
    }


    .field_with_errors > .field-text {
        @apply text-red-900 dark:text-red-200 placeholder-red-300 dark:placeholder-red-500
        bg-red-50 dark:bg-red-900/25
        border border-red-500 dark:border-red-500
        focus:outline-red-500 focus:outline-red-500 focus:border;
    }

    .field-boolean {
        @apply h-6 w-6
        rounded text-orange-500 dark:bg-gray-700
        focus:ring-0 focus:ring-offset-0
        focus:outline-2 focus:outline-offset-2 focus:outline-orange-500;
    }

    .geosearch .field_with_errors {
        @apply inline-block;
    }

    .geosearch .field_with_errors input,
    .geosearch .field_with_errors select {
        @apply text-red-900
        border-2 border-red-500 placeholder-red-300
        focus:outline-red-500 focus:outline-red-500;
    }

    /* Why? so that I can make the chevrons slightly lighter, from 6b7280 to D1D5DB (gray-300) */
    .geosearch select.chevron-gray-300, :is(.dark .geosearch select.dark\:chevron-gray-300) {
        background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3E%3Cpath stroke='%23D1D5DB' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='m6 8 4 4 4-4'/%3E%3C/svg%3E");
    }

    .geosearch select.chevron-gray-700, :is(.dark .geosearch select.dark\:chevron-gray-700) {
        background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3E%3Cpath stroke='%233f3f46' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='m6 8 4 4 4-4'/%3E%3C/svg%3E");
    }
}

